--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="przycisk_skalowanie">Skalowanie</string>
     <string name="przycisk_przesuw">Przesuw</string>
     <string name="przycisk_zanik">Zanik</string>
-    <string name="przycisk_test">test</string>
+    <string name="przycisk_test">test2</string>
 </resources>
